--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "echarts": "^3.8.5",
     "history": "^4.7.2",
     "http": "0.0.1-security",
+    "koa": "^2.11.0",
+    "koa-static": "^5.0.0",
     "normalize.css": "^8.0.0",
     "nuka-carousel": "^4.4.4",
     "prop-types": "^15.6.2",
