--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.49",
+    "@material-ui/styles": "^4.9.10",
     "area-data": "^5.0.6",
     "axios": "^0.18.0",
     "clipboard": "^2.0.4",
@@ -45,7 +47,8 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "slick-carousel": "^1.8.1",
-    "spring-picker": "^16.0.1"
+    "spring-picker": "^16.0.1",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -90,14 +93,13 @@
     "standard-loader": "^6.0.1",
     "style-loader": "^0.23.0",
     "ts-jest": "^25.3.1",
-    "typescript": "^3.5.1",
     "url-loader": "^1.1.1",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
   },
   "engines": {
-    "node": ">= 8.0.0",
+    "node": "11.14.0",
     "npm": ">= 5.0.0"
   },
   "babel": {
